# CriticalMineralsCausalEngine

./: .gitignore  README.md  REPO_MAP.md  graphite_causal_dag.dot  main.py  pyproject.toml
dag_registry/: README.md  discovered_graphite_causal_structure.json  sensor_reliability.dot  sensor_reliability.json  site_uptime.dot  site_uptime.json
data/: README.md  sensor_test_data.csv
docs/: CAUSAL_FRAMEWORK.md  README_pomdp.md
frontend/: .env.example  next.config.ts  package.json  vercel.json
notebooks/: exploration_placeholder.ipynb
scenarios/: china_graphite_export_restriction_40pct_2025.yaml  graphite_2008_calibrated.yaml  graphite_2008_multishock.yaml  graphite_baseline.yaml  graphite_baseline_2000_2011.yaml  graphite_demand_surge.yaml  graphite_export_restriction.yaml  graphite_policy_response.yaml  graphite_trade_shock_2008.json  graphite_trade_shock_2008.yaml  llm_generated_20260128_224809.yaml
scripts/: __init__.py  build_pomdp.py  build_priors.py  convert_comtrade.py  demo_graphite_trade_shock.py  generate_memo.py  ingest_docs.py  llm_query.py  normalize_timeseries.py  plot_run.py  run_scenario.py  run_suite.py  test_synthetic_control.py  validate_aggregate.py  validate_historical.py  validate_with_rag.py  validate_with_real_rag.py
skills/: build_dag_skill.json  estimate_effect_skill.json  simulate_policy_skill.json
src/: __init__.py  api.py  config.py  estimate.py  ingest.py  scm.py  simulate.py
tests/: generate_test_data.py  test_estimation.py  test_generate_memo_mock.py  test_graphite_baseline.py  test_graphite_scenarios_smoke.py  test_pomdp.py  (+2 more)
(+81 files in other folders)
